# ChemicalBurn

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/chemicalburn/: cb_math.h  connection.h  connection_vec.h  connections_map.h  node.h  node_vec.h  package.h  package_queue.h  package_set.h  settings.h  simulation.h  util.h  video.h
src/: cb_math.c  connection.c  connection_vec.c  connections_map.c  fuzz_target.c  main.c  node.c  node_vec.c  package.c  package_queue.c  package_set.c  settings.c  simulation.c  util.c  video.c
